tool: run open rewrite recipe on jpo-ode-svcs for Spring upgrade