@@ -89,7 +89,7 @@ public class DistressMsgFileParser extends LogFileParser {
       status = ParserStatus.ENTRY_PARSING_COMPLETE;
 
     } catch (Exception e) {
-      throw new FileParserException(String.format("Error parsing %s on step %d", getFilename(), getStep()), e);
+      throw new FileParserException("Error parsing %s on step %d".formatted(getFilename(), getStep()), e);
     }
 
     return status;
