@@ -53,7 +53,7 @@ public class IntersectionParser extends LogFileParser {
       resetStep();
       status = ParserStatus.ENTRY_PARSING_COMPLETE;
     } catch (Exception e) {
-      throw new FileParserException(String.format("Error parsing %s on step %d", getFilename(), getStep()), e);
+      throw new FileParserException("Error parsing %s on step %d".formatted(getFilename(), getStep()), e);
     }
 
     return status;
